--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,14 @@
 {
-    "version": "0.2.0",
+  "version": "0.2.0",
 
-    "configurations": [
-        {
-            "name": "Attach to process",
-            "type": "node",
-            "request": "attach",
-            "port": 9229,
-            "skipFiles": [
-                // Node.js internal core modules
-                "<node_internals>/**",
-        
-                // Ignore all dependencies (optional)
-                "${workspaceFolder}/node_modules/**",
-            ],
-        }
-    ],
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/index.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "outFiles": ["${workspaceFolder}/out/**/*.js"]
+    }
+  ]
 }
