--- a/express/package.json
+++ b/express/package.json
@@ -1,15 +1,21 @@
 {
   "type": "module",
+  "scripts": {
+    "dev": "tsx watch index.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "tsx": "^4.10.5"
   },
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^3.0.1",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/node": "^20.14.2",
     "better-sqlite3": "^9.6.0",
     "express": "^4.19.2",
     "lucia": "^3.2.0",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "typescript": "^5.4.5"
   }
 }
