--- a/express/package.json
+++ b/express/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "tsx watch index.ts"
+    "dev": "tsx watch index.ts",
+    "start": "tsx index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
