--- a/express/package.json
+++ b/express/package.json
@@ -13,6 +13,7 @@
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.14.2",
     "better-sqlite3": "^9.6.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "lucia": "^3.2.0",
     "sequelize": "^6.37.3",
