--- a/.gitignore
+++ b/.gitignore
@@ -377,6 +377,7 @@ xcuserdata/
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
